<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" >

    <Button
        android:id="@+id/btnMessage"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/btn_bg_in_profile_info"
        android:contentDescription="@string/description_playerInfoView_messageButton"
        android:enabled="false"
        android:text="@string/btn_label_message"
        android:textColor="@android:color/white"
        android:textSize="@dimen/xeeng_btn_textSize" />

    <FrameLayout
        android:id="@+id/frameBtnAddFriend"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/xeeng_dialog_player_info_bottomtab_gap"
        android:layout_weight="1"
        android:alpha="0.5" >

        <com.tv.xeeng.gui.customview.BadgeView
            android:id="@+id/badgeViewFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_index_text"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnAddFriend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_bg_in_profile_info"
            android:contentDescription="@string/description_playerInfoView_addFrendButton"
            android:text="@string/btn_label_addFriend"
            android:textColor="@android:color/white"
            android:textSize="@dimen/xeeng_btn_textSize" />
    </FrameLayout>

    <Button
        android:id="@+id/btnCharging"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/xeeng_dialog_player_info_bottomtab_gap"
        android:layout_weight="1"
        android:background="@drawable/btn_bg_in_profile_info"
        android:text="@string/btn_label_charging"
        android:textColor="@android:color/white"
        android:textSize="@dimen/xeeng_btn_textSize" />

</LinearLayout>