<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@null"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/txt_index"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/label_index"
        android:textColor="#d49611"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtChargingType"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/label_charging_type"
        android:textColor="#d49611"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtGiveValue"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/label_give_value"
        android:textColor="#d49611"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtGetValue"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/label_get_value"
        android:textColor="#d49611"
        android:textStyle="bold" />

</LinearLayout>