<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/xeeng_ui_bottombar_height"
    android:background="@drawable/bottom_bar_bg"
    android:gravity="center_vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <LinearLayout
        android:id="@+id/layout_user_info"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/xeeng_ui_bottombar_height"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/rg_room_type"
        android:clipToPadding="false"
        android:gravity="center_vertical" >

        <include
            android:layout_width="50dp"
            android:layout_height="50dp"
            layout="@layout/xeeng_ui_avatar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xeeng_ui_profile_texts_marginLeft"
            android:layout_marginRight="@dimen/xeeng_ui_profile_texts_marginRight"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/default_username"
                android:textColor="@android:color/white"
                android:textSize="@dimen/xeeng_profile_username_textSize" />

            <TextView
                android:id="@+id/tv_profile_gold"
                style="@style/TextMoney.GoldCoin.Golden"
                android:text="@string/default_cash_value" />
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_room_type"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical|right"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/btn_amateur_room"
            style="@style/ButtonSwitch"
            android:layout_marginRight="5dp"
            android:text="@string/label_btnAmateurRooms"
            android:clickable="false" />

        <RadioButton
            android:id="@+id/btn_millionaire_room"
            style="@style/ButtonSwitch"
            android:layout_marginRight="5dp"
            android:text="@string/label_btnMillionaireRooms"
            android:clickable="false" />
        
        <RadioButton
            android:id="@+id/btn_richer_room"
            style="@style/ButtonSwitch"
            android:layout_marginRight="5dp"
            android:text="@string/label_btnRicherRooms"
            android:clickable="false" />

        <RadioButton
            android:id="@+id/btn_vip_room"
            style="@style/ButtonSwitch"
            android:text="@string/label_btnVipRooms"
            android:clickable="false" />    </RadioGroup>

</RelativeLayout>