<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/normal_bg"
    tools:context=".UserSettingsActivity" >

    <include
        android:id="@+id/layout_topbar"
        layout="@layout/xeeng_ui_topbar" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_topbar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/setting_bg"
        android:paddingBottom="3dp"
        android:paddingTop="3dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_register"
                    style="@style/TextLabel.SettingCell"
                    android:text="@string/register" />

                <Button
                    android:id="@+id/btn_register"
                    style="@style/Button1.Normal"
                    android:layout_alignRight="@+id/tv_register"
                    android:layout_alignTop="@+id/tv_register"
                    android:layout_margin="2dp"
                    android:text="@string/register" />

                <TextView
                    android:id="@+id/tv_change_password"
                    style="@style/TextLabel.SettingCell"
                    android:layout_below="@+id/tv_register"
                    android:text="Đổi mật khẩu" />

                <Button
                    android:id="@+id/btn_change_password"
                    style="@style/Button1.Normal"
                    android:layout_alignRight="@+id/tv_change_password"
                    android:layout_alignTop="@+id/tv_change_password"
                    android:layout_margin="2dp"
                    android:text="Đổi mật khẩu" />

                <TextView
                    android:id="@+id/tv_logout"
                    style="@style/TextLabel.SettingCell"
                    android:layout_below="@+id/tv_change_password"
                    android:text="@string/logout" />

                <Button
                    android:id="@+id/btn_logout"
                    style="@style/Button1.Normal.Negative"
                    android:layout_alignRight="@+id/tv_logout"
                    android:layout_alignTop="@+id/tv_logout"
                    android:layout_margin="2dp"
                    android:text="@string/logout" />

                <TextView
                    android:id="@+id/tv_sound_bg_music"
                    style="@style/TextLabel.SettingCell"
                    android:layout_below="@+id/tv_logout"
                    android:text="@string/sound_bg_music" />

                <ToggleButton
                    android:id="@+id/toggle_sound_bg_music"
                    style="@style/Switch"
                    android:layout_alignRight="@+id/tv_sound_bg_music"
                    android:layout_alignTop="@+id/tv_sound_bg_music"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="3dp" />

                <TextView
                    android:id="@+id/tv_sound_effect"
                    style="@style/TextLabel.SettingCell"
                    android:layout_below="@+id/tv_sound_bg_music"
                    android:text="@string/sound_effect" />

                <ToggleButton
                    android:id="@+id/toggle_sound_effect"
                    style="@style/Switch"
                    android:layout_alignRight="@+id/tv_sound_effect"
                    android:layout_alignTop="@+id/tv_sound_effect"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="3dp" />

                <TextView
                    android:id="@+id/tv_viberate"
                    style="@style/TextLabel.SettingCell"
                    android:layout_below="@+id/tv_sound_effect"
                    android:text="@string/viberate" />

                <ToggleButton
                    android:id="@+id/toggle_viberate"
                    style="@style/Switch"
                    android:layout_alignRight="@+id/tv_viberate"
                    android:layout_alignTop="@+id/tv_viberate"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="3dp" />

                <TextView
                    android:id="@+id/tv_autodeny"
                    style="@style/TextLabel.SettingCell"
                    android:layout_below="@+id/tv_viberate"
                    android:text="@string/label_automatically_deny_invitation" />

                <ToggleButton
                    android:id="@+id/toggle_autodeny"
                    style="@style/Switch"
                    android:layout_alignRight="@+id/tv_autodeny"
                    android:layout_alignTop="@+id/tv_autodeny"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="3dp" />

                <LinearLayout
                    android:id="@+id/layout_support"
                    style="@style/TextLabel.SettingCell"
                    android:layout_below="@+id/tv_autodeny" >

                    <TextView
                        style="@style/TextLabel.SettingCell"
                        android:layout_margin="0dp"
                        android:background="@null"
                        android:padding="0dp"
                        android:text="@string/support_channel" />

                    <TextView
                        style="@style/TextLabel.Golden"
                        android:layout_alignLeft="@+id/tv_support"
                        android:layout_alignTop="@+id/tv_support"
                        android:layout_marginLeft="8dp"
                        android:text="@string/label_email_support" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>