<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/layout_main"
        android:layout_width="@dimen/dialog_basic_width"
        android:layout_height="@dimen/dialog_basic_height"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:background="@drawable/popup_bg"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="@string/description_dialog_bodyBackground"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_button"
            android:layout_below="@+id/txt_title"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text="@string/description_playerInfoVIew_backgroundTextLong"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <EditText android:imeOptions="flagNoExtractUi"
                android:id="@+id/edt_input"
                style="@style/Input.Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp" >

            <Button
                android:id="@+id/btn_negative"
                style="@style/Button1.Normal.Negative"
                android:layout_marginRight="18dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_positive"
                style="@style/Button1.Normal"                
                android:text="@string/ok" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_close"
        style="@style/ButtonIcon.Close"
        android:layout_alignRight="@+id/layout_main" />

</RelativeLayout>